fixed the spacing issue at the top of the page

--- a/bootstrap/less/custom.less
+++ b/bootstrap/less/custom.less
@@ -50,16 +50,17 @@ h4 {
 }
 
 #banner_description_text {
-  font-family: @thinfont;
+  font-family: @generalfont;
   text-align: center;
   font-size: 62px;
 }
 
 .banner {
+  margin-top: 0px;
   height: 600px;
   width: 100%;
   color: @white;
-  /*display: inline-block;*/
+  display: block;
   background: rgba(252,236,252,1);
   background: -webkit-linear-gradient(bottom left, rgba(252,236,252,1) 0%, rgba(26,188,156,1) 0%, rgba(45,162,201,1) 30%, rgba(52,152,219,1) 42%, rgba(135,101,189,1) 71%, rgba(155,89,182,1) 78%);
   background: -o-linear-gradient(bottom left, rgba(252,236,252,1) 0%, rgba(26,188,156,1) 0%, rgba(45,162,201,1) 30%, rgba(52,152,219,1) 42%, rgba(135,101,189,1) 71%, rgba(155,89,182,1) 78%);
@@ -171,10 +172,10 @@ transform: translateX(-50%);
 
 .nav_trigger {
   cursor: pointer;
-  /*display: inline-block;*/
-  font-size: 26px;
-  margin: 5px 20px 0 50px;
+  font-size: 36px;
+  margin: 0px 20px 0 50px;
   float: right;
+  display: inline-block;
 }
 
 #push_sidebar {
@@ -216,15 +217,10 @@ body.show_sidebar #wrapper {
 }
 
 @media (max-width: 767px) {
-
-  .nav_trigger {
-    font-size: 19px;
+  .nav_trigger {font-size: 19px;
   }
-
   #push_sidebar { width: 90%; }
-
   body.show_sidebar #push_sidebar { left: 20%; }
-
   body.show_sidebar #wrapper {
     margin-right: 90%;
     width: 20%;
@@ -232,14 +228,11 @@ body.show_sidebar #wrapper {
 }
 
 @media (min-width: 992px) {
-
   #push_sidebar {
-  /*changes the widht of the sidebar*/
+  /*changes the width of the sidebar*/
     width: 10%;
   }
-
   body.show_sidebar #push_sidebar { left: 90%; }
-
   body.show_sidebar #wrapper {
     margin-right: 20%;
     width: 90%;
